sheep shearer refactor: modernize